--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/ps_kor
 spring.datasource.username=root
 spring.datasource.password=
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
